src/main/java/pl/yeloon/magisterium/resolver/parser/antlr/KodbotParser.java
// Generated from C:\STUDIA\kodbotLang\Kodbot.g4 by ANTLR 4.1
package pl.yeloon.magisterium.resolver.parser.antlr;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class KodbotParser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		MOVE=1, JUMP=2, TURN_LEFT=3, TURN_RIGHT=4, INCREMENT_ID=5, DECREMENT_ID=6, 
		NUMBER=7, MAIN=8, L_BRACKET=9, R_BRACKET=10, L_PARENTHESIS=11, R_PARENTHESIS=12, 
		REPEAT=13, EQUAL=14, PLUS=15, MINUS=16, SEMICOLON=17, ID=18, WS=19;
	public static final String[] tokenNames = {
		"<INVALID>", "'move'", "'jump'", "'left'", "'right'", "INCREMENT_ID", 
		"DECREMENT_ID", "NUMBER", "'main'", "'{'", "'}'", "'('", "')'", "'repeat'", 
		"'='", "'+'", "'-'", "';'", "ID", "WS"
	};
	public static final int
		RULE_start = 0, RULE_main = 1, RULE_functionDef = 2, RULE_block = 3, RULE_stat = 4, 
		RULE_expr = 5, RULE_repeat = 6, RULE_functionCall = 7, RULE_var = 8, RULE_assignWithAddition = 9, 
		RULE_assignWithSubtraction = 10, RULE_assign = 11, RULE_move = 12, RULE_jump = 13, 
		RULE_turnLeft = 14, RULE_turnRight = 15, RULE_increment = 16, RULE_decrement = 17;
	public static final String[] ruleNames = {
		"start", "main", "functionDef", "block", "stat", "expr", "repeat", "functionCall", 
		"var", "assignWithAddition", "assignWithSubtraction", "assign", "move", 
		"jump", "turnLeft", "turnRight", "increment", "decrement"
	};

	@Override
	public String getGrammarFileName() { return "Kodbot.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public ATN getATN() { return _ATN; }

	public KodbotParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class StartContext extends ParserRuleContext {
		public FunctionDefContext functionDef(int i) {
			return getRuleContext(FunctionDefContext.class,i);
		}
		public MainContext main(int i) {
			return getRuleContext(MainContext.class,i);
		}
		public List<MainContext> main() {
			return getRuleContexts(MainContext.class);
		}
		public List<FunctionDefContext> functionDef() {
			return getRuleContexts(FunctionDefContext.class);
		}
		public StartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KodbotListener ) ((KodbotListener)listener).enterStart(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KodbotListener ) ((KodbotListener)listener).exitStart(this);
		}
	}

	public final StartContext start() throws RecognitionException {
		StartContext _localctx = new StartContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_start);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(38); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				setState(38);
				switch (_input.LA(1)) {
				case MAIN:
					{
					setState(36); main();
					}
					break;
				case ID:
					{
					setState(37); functionDef();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(40); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==MAIN || _la==ID );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MainContext extends ParserRuleContext {
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public TerminalNode MAIN() { return getToken(KodbotParser.MAIN, 0); }
		public MainContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_main; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KodbotListener ) ((KodbotListener)listener).enterMain(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KodbotListener ) ((KodbotListener)listener).exitMain(this);
		}
	}

	public final MainContext main() throws RecognitionException {
		MainContext _localctx = new MainContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_main);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(42); match(MAIN);
			setState(43); block();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionDefContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(KodbotParser.ID, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public FunctionDefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionDef; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KodbotListener ) ((KodbotListener)listener).enterFunctionDef(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KodbotListener ) ((KodbotListener)listener).exitFunctionDef(this);
		}
	}

	public final FunctionDefContext functionDef() throws RecognitionException {
		FunctionDefContext _localctx = new FunctionDefContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_functionDef);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(45); match(ID);
			setState(46); block();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlockContext extends ParserRuleContext {
		public TerminalNode R_BRACKET() { return getToken(KodbotParser.R_BRACKET, 0); }
		public StatContext stat() {
			return getRuleContext(StatContext.class,0);
		}
		public TerminalNode L_BRACKET() { return getToken(KodbotParser.L_BRACKET, 0); }
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KodbotListener ) ((KodbotListener)listener).enterBlock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KodbotListener ) ((KodbotListener)listener).exitBlock(this);
		}
	}

	public final BlockContext block() throws RecognitionException {
		BlockContext _localctx = new BlockContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_block);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(48); match(L_BRACKET);
			setState(49); stat();
			setState(50); match(R_BRACKET);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatContext extends ParserRuleContext {
		public RepeatContext repeat(int i) {
			return getRuleContext(RepeatContext.class,i);
		}
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public List<RepeatContext> repeat() {
			return getRuleContexts(RepeatContext.class);
		}
		public StatContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stat; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KodbotListener ) ((KodbotListener)listener).enterStat(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KodbotListener ) ((KodbotListener)listener).exitStat(this);
		}
	}

	public final StatContext stat() throws RecognitionException {
		StatContext _localctx = new StatContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_stat);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(54); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				setState(54);
				switch (_input.LA(1)) {
				case MOVE:
				case JUMP:
				case TURN_LEFT:
				case TURN_RIGHT:
				case INCREMENT_ID:
				case DECREMENT_ID:
				case ID:
					{
					setState(52); expr();
					}
					break;
				case REPEAT:
					{
					setState(53); repeat();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(56); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << MOVE) | (1L << JUMP) | (1L << TURN_LEFT) | (1L << TURN_RIGHT) | (1L << INCREMENT_ID) | (1L << DECREMENT_ID) | (1L << REPEAT) | (1L << ID))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExprContext extends ParserRuleContext {
		public DecrementContext decrement() {
			return getRuleContext(DecrementContext.class,0);
		}
		public TurnRightContext turnRight() {
			return getRuleContext(TurnRightContext.class,0);
		}
		public JumpContext jump() {
			return getRuleContext(JumpContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(KodbotParser.SEMICOLON, 0); }
		public AssignWithSubtractionContext assignWithSubtraction() {
			return getRuleContext(AssignWithSubtractionContext.class,0);
		}
		public AssignWithAdditionContext assignWithAddition() {
			return getRuleContext(AssignWithAdditionContext.class,0);
		}
		public FunctionCallContext functionCall() {
			return getRuleContext(FunctionCallContext.class,0);
		}
		public TurnLeftContext turnLeft() {
			return getRuleContext(TurnLeftContext.class,0);
		}
		public AssignContext assign() {
			return getRuleContext(AssignContext.class,0);
		}
		public MoveContext move() {
			return getRuleContext(MoveContext.class,0);
		}
		public IncrementContext increment() {
			return getRuleContext(IncrementContext.class,0);
		}
		public ExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KodbotListener ) ((KodbotListener)listener).enterExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KodbotListener ) ((KodbotListener)listener).exitExpr(this);
		}
	}

	public final ExprContext expr() throws RecognitionException {
		ExprContext _localctx = new ExprContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_expr);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(68);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				{
				setState(58); move();
				}
				break;

			case 2:
				{
				setState(59); jump();
				}
				break;

			case 3:
				{
				setState(60); turnLeft();
				}
				break;

			case 4:
				{
				setState(61); turnRight();
				}
				break;

			case 5:
				{
				setState(62); functionCall();
				}
				break;

			case 6:
				{
				setState(63); assign();
				}
				break;

			case 7:
				{
				setState(64); assignWithAddition();
				}
				break;

			case 8:
				{
				setState(65); assignWithSubtraction();
				}
				break;

			case 9:
				{
				setState(66); increment();
				}
				break;

			case 10:
				{
				setState(67); decrement();
				}
				break;
			}
			setState(70); match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RepeatContext extends ParserRuleContext {
		public TerminalNode REPEAT() { return getToken(KodbotParser.REPEAT, 0); }
		public TerminalNode L_PARENTHESIS() { return getToken(KodbotParser.L_PARENTHESIS, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public VarContext var() {
			return getRuleContext(VarContext.class,0);
		}
		public TerminalNode R_PARENTHESIS() { return getToken(KodbotParser.R_PARENTHESIS, 0); }
		public RepeatContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_repeat; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KodbotListener ) ((KodbotListener)listener).enterRepeat(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KodbotListener ) ((KodbotListener)listener).exitRepeat(this);
		}
	}

	public final RepeatContext repeat() throws RecognitionException {
		RepeatContext _localctx = new RepeatContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_repeat);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(72); match(REPEAT);
			setState(73); match(L_PARENTHESIS);
			setState(74); var();
			setState(75); match(R_PARENTHESIS);
			setState(76); block();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionCallContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(KodbotParser.ID, 0); }
		public FunctionCallContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionCall; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KodbotListener ) ((KodbotListener)listener).enterFunctionCall(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KodbotListener ) ((KodbotListener)listener).exitFunctionCall(this);
		}
	}

	public final FunctionCallContext functionCall() throws RecognitionException {
		FunctionCallContext _localctx = new FunctionCallContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_functionCall);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(78); match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VarContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(KodbotParser.ID, 0); }
		public TerminalNode NUMBER() { return getToken(KodbotParser.NUMBER, 0); }
		public VarContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_var; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KodbotListener ) ((KodbotListener)listener).enterVar(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KodbotListener ) ((KodbotListener)listener).exitVar(this);
		}
	}

	public final VarContext var() throws RecognitionException {
		VarContext _localctx = new VarContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_var);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(80);
			_la = _input.LA(1);
			if ( !(_la==NUMBER || _la==ID) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AssignWithAdditionContext extends ParserRuleContext {
		public VarContext firstRight;
		public VarContext secondRight;
		public VarContext var(int i) {
			return getRuleContext(VarContext.class,i);
		}
		public TerminalNode ID() { return getToken(KodbotParser.ID, 0); }
		public TerminalNode PLUS() { return getToken(KodbotParser.PLUS, 0); }
		public TerminalNode EQUAL() { return getToken(KodbotParser.EQUAL, 0); }
		public List<VarContext> var() {
			return getRuleContexts(VarContext.class);
		}
		public AssignWithAdditionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assignWithAddition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KodbotListener ) ((KodbotListener)listener).enterAssignWithAddition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KodbotListener ) ((KodbotListener)listener).exitAssignWithAddition(this);
		}
	}

	public final AssignWithAdditionContext assignWithAddition() throws RecognitionException {
		AssignWithAdditionContext _localctx = new AssignWithAdditionContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_assignWithAddition);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(82); match(ID);
			setState(83); match(EQUAL);
			setState(84); ((AssignWithAdditionContext)_localctx).firstRight = var();
			setState(85); match(PLUS);
			setState(86); ((AssignWithAdditionContext)_localctx).secondRight = var();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AssignWithSubtractionContext extends ParserRuleContext {
		public VarContext firstRight;
		public VarContext secondRight;
		public VarContext var(int i) {
			return getRuleContext(VarContext.class,i);
		}
		public TerminalNode MINUS() { return getToken(KodbotParser.MINUS, 0); }
		public TerminalNode ID() { return getToken(KodbotParser.ID, 0); }
		public TerminalNode EQUAL() { return getToken(KodbotParser.EQUAL, 0); }
		public List<VarContext> var() {
			return getRuleContexts(VarContext.class);
		}
		public AssignWithSubtractionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assignWithSubtraction; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KodbotListener ) ((KodbotListener)listener).enterAssignWithSubtraction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KodbotListener ) ((KodbotListener)listener).exitAssignWithSubtraction(this);
		}
	}

	public final AssignWithSubtractionContext assignWithSubtraction() throws RecognitionException {
		AssignWithSubtractionContext _localctx = new AssignWithSubtractionContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_assignWithSubtraction);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(88); match(ID);
			setState(89); match(EQUAL);
			setState(90); ((AssignWithSubtractionContext)_localctx).firstRight = var();
			setState(91); match(MINUS);
			setState(92); ((AssignWithSubtractionContext)_localctx).secondRight = var();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AssignContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(KodbotParser.ID, 0); }
		public TerminalNode EQUAL() { return getToken(KodbotParser.EQUAL, 0); }
		public VarContext var() {
			return getRuleContext(VarContext.class,0);
		}
		public AssignContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assign; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KodbotListener ) ((KodbotListener)listener).enterAssign(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KodbotListener ) ((KodbotListener)listener).exitAssign(this);
		}
	}

	public final AssignContext assign() throws RecognitionException {
		AssignContext _localctx = new AssignContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_assign);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(94); match(ID);
			setState(95); match(EQUAL);
			setState(96); var();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MoveContext extends ParserRuleContext {
		public TerminalNode MOVE() { return getToken(KodbotParser.MOVE, 0); }
		public MoveContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_move; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KodbotListener ) ((KodbotListener)listener).enterMove(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KodbotListener ) ((KodbotListener)listener).exitMove(this);
		}
	}

	public final MoveContext move() throws RecognitionException {
		MoveContext _localctx = new MoveContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_move);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(98); match(MOVE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class JumpContext extends ParserRuleContext {
		public TerminalNode JUMP() { return getToken(KodbotParser.JUMP, 0); }
		public JumpContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_jump; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KodbotListener ) ((KodbotListener)listener).enterJump(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KodbotListener ) ((KodbotListener)listener).exitJump(this);
		}
	}

	public final JumpContext jump() throws RecognitionException {
		JumpContext _localctx = new JumpContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_jump);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(100); match(JUMP);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TurnLeftContext extends ParserRuleContext {
		public TerminalNode TURN_LEFT() { return getToken(KodbotParser.TURN_LEFT, 0); }
		public TurnLeftContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_turnLeft; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KodbotListener ) ((KodbotListener)listener).enterTurnLeft(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KodbotListener ) ((KodbotListener)listener).exitTurnLeft(this);
		}
	}

	public final TurnLeftContext turnLeft() throws RecognitionException {
		TurnLeftContext _localctx = new TurnLeftContext(_ctx, getState());
		enterRule(_localctx, 28, RULE_turnLeft);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(102); match(TURN_LEFT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TurnRightContext extends ParserRuleContext {
		public TerminalNode TURN_RIGHT() { return getToken(KodbotParser.TURN_RIGHT, 0); }
		public TurnRightContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_turnRight; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KodbotListener ) ((KodbotListener)listener).enterTurnRight(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KodbotListener ) ((KodbotListener)listener).exitTurnRight(this);
		}
	}

	public final TurnRightContext turnRight() throws RecognitionException {
		TurnRightContext _localctx = new TurnRightContext(_ctx, getState());
		enterRule(_localctx, 30, RULE_turnRight);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(104); match(TURN_RIGHT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IncrementContext extends ParserRuleContext {
		public TerminalNode INCREMENT_ID() { return getToken(KodbotParser.INCREMENT_ID, 0); }
		public IncrementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_increment; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KodbotListener ) ((KodbotListener)listener).enterIncrement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KodbotListener ) ((KodbotListener)listener).exitIncrement(this);
		}
	}

	public final IncrementContext increment() throws RecognitionException {
		IncrementContext _localctx = new IncrementContext(_ctx, getState());
		enterRule(_localctx, 32, RULE_increment);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(106); match(INCREMENT_ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DecrementContext extends ParserRuleContext {
		public TerminalNode DECREMENT_ID() { return getToken(KodbotParser.DECREMENT_ID, 0); }
		public DecrementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_decrement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KodbotListener ) ((KodbotListener)listener).enterDecrement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KodbotListener ) ((KodbotListener)listener).exitDecrement(this);
		}
	}

	public final DecrementContext decrement() throws RecognitionException {
		DecrementContext _localctx = new DecrementContext(_ctx, getState());
		enterRule(_localctx, 34, RULE_decrement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(108); match(DECREMENT_ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static final ATN _ATN =
		ATNSimulator.deserialize(_serializedATN.toCharArray());
	static {
		_decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
		for (int i = 0; i < _ATN.getNumberOfDecisions(); i++) {
			_decisionToDFA[i] = new DFA(_ATN.getDecisionState(i), i);
		}
	}
}